--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,6 +2,7 @@ version: '3.3'
 services:
     butterfly:
         container_name: blog
+        restart: unless-stopped
         volumes:
             - '~/.gitconfig:/root/.gitconfig:ro'
             - '~/.ssh:/root/.ssh:ro'
